--- a/css/hero.css
+++ b/css/hero.css
@@ -69,7 +69,7 @@ nav ul a {
     justify-content: space-between;
     align-items: center;
     padding-left: 4rem;
-    background: url(/res/Frame\ 3\ \(5\).svg);
+    background: url(res/Frame\ 3\ \(5\).svg);
     background-repeat: no-repeat;
     background-size: cover;
 }
