--- a/css/media.css
+++ b/css/media.css
@@ -2,6 +2,8 @@
     .nav {
         padding-left: 1rem;
         height: auto;
+        position: fixed;
+        top: 0;
     }
     nav {
         display: none;
@@ -12,13 +14,16 @@
         padding-right: 1rem;
         margin-top: 4rem;
         justify-content: center;
+        margin-top: 0;
+        padding-top: 120px;
     }
     .hleft {
         width: auto;
+        animation: slideInFromTop 1.2s ease-in;
     }
     .hleft h1 {
         font-style: normal;
-        font-weight: 500;
+        font-weight: 600;
         font-size: 2rem;
     }
     .logo img {
@@ -37,10 +42,12 @@
         width: auto;
         padding: 0;
         justify-content: center;
+        animation: slideInFromBottom 1.2s ease-in;
     }
     .hright img {
         width: 100%;
         display: block;
+        margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
     }
@@ -103,6 +110,20 @@
         width: auto;
         margin-left: 1.5rem;
         margin-bottom: 1.5rem;
+        margin-right: 0;
+    }
+    .cards h1 {
+        width: 80%;
+        margin: auto;
+    }
+    .pLearn h1,
+    p {
+        width: 80%;
+        /* margin: auto; */
+    }
+    .saydiv {
+        margin-top: 0;
+        margin-bottom: 0;
     }
     .card2 {
         width: auto;
@@ -195,6 +216,7 @@
         margin-top: 1rem;
         align-items: center;
         justify-content: space-around;
+        flex-direction: column;
     }
     .fdiv3 h2 {
         margin-bottom: 2rem;
