--- a/animation.css
+++ b/animation.css
@@ -33,3 +33,14 @@
         transform: translateX(0);
     }
 }
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
