--- a/css/media.css
+++ b/css/media.css
@@ -1,15 +1,16 @@
 @media screen and (max-width: 500px) {
     .nav {
         padding-left: 1rem;
-        height: auto;
+        height: 60px;
         position: fixed;
         top: 0;
+        position: relative;
     }
     nav {
         position: absolute;
         right: 0px;
-        height: 92vh;
-        top: 81px;
+        height: 94vh;
+        top: 59px;
         width: 50%;
         transform: translateX(100%);
         transition: 0.7s;
