--- a/cards.css
+++ b/cards.css
@@ -76,6 +76,7 @@
     font-size: 1.2rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
     margin-bottom: 2.5rem;
+    line-height: 20px;
 }
