--- a/css/media.css
+++ b/css/media.css
@@ -4,7 +4,7 @@
         height: 60px;
         position: fixed;
         top: 0;
-        position: relative;
+        position: fixed;
     }
     nav {
         position: absolute;
@@ -118,9 +118,9 @@
         display: block;
         margin-left: auto;
     }
-    .whydiv3 img[src="res/whywe2.png"] {
-        width: 80%;
-        display: block;
+    width: 80%;
+    display: block;
+    .whydiv3 img[ src="res/whywe2.png"] {
         margin-left: auto;
     }
     .whydiv2 h3 {
