--- a/css/pLearn.css
+++ b/css/pLearn.css
@@ -23,7 +23,8 @@
 }
 
 .pLearn p {
-    font-size: 0.8rem;
+    font-size: 1rem;
+    line-height: 20px;
     text-align: center;
 }
 
@@ -32,4 +33,8 @@
     margin: auto;
     width: 430px;
     padding-top: 5rem;
+}
+
+button h1 {
+    font-size: 1.1rem;
 }
