--- a/css/parentsPoint.css
+++ b/css/parentsPoint.css
@@ -46,9 +46,10 @@
     font-size: 1.2rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     margin-top: 1.5rem;
     color: white;
+    line-height: 20px;
 }
 
 .three1 {
