--- a/css/hero.css
+++ b/css/hero.css
@@ -63,7 +63,7 @@ nav ul li {
 
 nav ul a {
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: white;
     letter-spacing: 1px;
     font-weight: 700;
@@ -120,6 +120,7 @@ nav ul a {
     margin-top: 2rem;
     margin-bottom: 2rem;
     font-weight: 400;
+    line-height: 35px;
 }
 
 .hleft {
@@ -147,7 +148,7 @@ button {
 
 .hleft button h1 {
     position: absolute;
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     top: 50%;
     color: white;
     left: 50%;
