--- a/css/footer.css
+++ b/css/footer.css
@@ -76,3 +76,19 @@ footer p {
     align-items: center;
     justify-content: center;
 }
+
+.fdiv5 {
+    display: flex;
+    flex-direction: column;
+}
+
+footer a {
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.new {
+    align-items: flex-start;
+}
