--- a/css/cta.css
+++ b/css/cta.css
@@ -7,7 +7,8 @@
     text-align: center;
 }
 
-.cta button {
+.button2 {
+    position: relative;
     display: block;
     margin: auto;
     width: 250px;
@@ -24,23 +25,29 @@
     transition: 0.8s;
     cursor: pointer;
     background: white;
+    text-decoration: none;
 }
 
-.cta button:hover {
+.button2:hover {
     transition: 0.8s;
     color: white;
-    background: linear-gradient(90deg, #F2709C 30.42%, #FF9472 117.42%)
+    background: linear-gradient(90deg, #F2709C 30.42%, #FF9472 117.42%);
+    transform: scale(1.2);
+    
 }
 
-.cta h1 {
-    color: rgba(0, 0, 0, 0.7);
-    padding-top: 4rem;
-    padding-bottom: 2rem;
+.button2 h1 {
+    position: absolute;
+    font-size: 1.1rem;
+    top: 50%;
+    color: black;
     text-align: center;
-    font-weight: 700;
-    font-size: 1.5rem;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+.button2 h1:hover {
+    color: white;}
 
 .cta p {
     color: rgba(0, 0, 0, 0.7);
