--- a/css/hero.css
+++ b/css/hero.css
@@ -14,6 +14,20 @@ body {
     text-transform: none;
 }
 
+.overlay {
+    display: none;
+    z-index: 599;
+   
+    width: 100vw;
+    position: fixed;
+    height: 100vh;
+    background-color: #de6262;
+    opacity: 0.4;
+    left: 0px;
+    top: 70px;
+  
+}
+
 .nav {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: 11111111;
@@ -75,7 +89,7 @@ nav ul a {
     justify-content: space-between;
     align-items: center;
     padding-left: 4rem;
-    background: url(file.svg);
+    background-image: url('../res/file.png');
     background-repeat: no-repeat;
     background-size: cover;
     /* padding-top: 280px */
@@ -130,7 +144,7 @@ nav ul a {
     justify-content: center;
 }
 
-button {
+.button {
     position: relative;
     width: 220px;
     height: 60px;
@@ -146,11 +160,16 @@ button {
     background: linear-gradient(90deg, #F2709C 30.42%, #FF9472 117.42%);
 }
 
-.hleft button h1 {
+.button:hover {
+    transform: scale(1.2);
+}
+
+.button .h {
     position: absolute;
     font-size: 1.1rem;
     top: 50%;
     color: white;
+    text-align: center;
     left: 50%;
     transform: translate(-50%, -50%);
 }
