--- a/css/media.css
+++ b/css/media.css
@@ -1,16 +1,24 @@
 @media screen and (max-width: 500px) {
+
+
+
+.over {
+    display: block;
+}
+
     .nav {
         padding-left: 1rem;
-        height: 60px;
+        height: 70px;
         position: fixed;
         top: 0;
         position: fixed;
     }
     nav {
+        z-index: 600;
         position: absolute;
         right: 0px;
         height: 94vh;
-        top: 59px;
+        top: 70px;
         width: 50%;
         transform: translateX(100%);
         transition: 0.7s;
